首页功能开发

--- a/ui/src/app.scss
+++ b/ui/src/app.scss
@@ -116,8 +116,8 @@ button.btn-act::after {
     width: 60px;
     height: 60px;
     position: absolute;
-    right: -60rpx;
-    top: -60rpx;
+    right: 60px;
+    top: 60px;
 }
 
 .icon-circle-close-act {
